--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FarmRent - Equipment Rental & Farm Management</title>
+    <title>Karm Al Anab</title>
     <meta name="description" content="Modern equipment rental and farm management system for farmers. Rent high-quality farming equipment and manage your farm operations efficiently." />
     <meta name="author" content="FarmRent" />
     <meta name="keywords" content="farm equipment rental, farm management, agriculture, farming tools, tractor rental" />
