--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FarmRent - Equipment Rental & Farm Management</title>
+    <title>Karm El Anab</title>
     <meta name="description" content="Modern equipment rental and farm management system for farmers. Rent high-quality farming equipment and manage your farm operations efficiently." />
     <meta name="author" content="FarmRent" />
     <meta name="keywords" content="farm equipment rental, farm management, agriculture, farming tools, tractor rental" />
-    <link rel="canonical" href="https://farmrent.app/" />
 
-    <meta property="og:title" content="FarmRent - Equipment Rental & Farm Management" />
+    <meta property="og:title" content="Karm El Anab" />
     <meta property="og:description" content="Modern equipment rental and farm management system for farmers." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@FarmRent" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
